| Bug #57618 | While replaying log entries ndb_restore does not retry on temporary errors | ||
|---|---|---|---|
| Submitted: | 21 Oct 2010 7:31 | Modified: | 22 Oct 2010 13:18 |
| Reporter: | Geert Vanderkelen | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-7.1 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
| Tags: | Backup, ndb_restore, restore | ||
[21 Oct 2010 7:31]
Geert Vanderkelen
[21 Oct 2010 8:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/121471 3312 Jonas Oreland 2010-10-21 ndb - bug#57618 - also retry log-entries, (patch use goto to make it small)
[21 Oct 2010 8:54]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/121492 3315 Jonas Oreland 2010-10-21 ndb - bug#57618 - also retry log-entries, (patch use goto to make it small)
[21 Oct 2010 9:01]
Bugs System
Pushed into mysql-5.1-telco-6.3 5.1.51-ndb-6.3.39 (revid:jonas@mysql.com-20101021085109-ocjmrdphvq432q9p) (version source revid:jonas@mysql.com-20101021085109-ocjmrdphvq432q9p) (merge vers: 5.1.51-ndb-6.3.39) (pib:21)
[21 Oct 2010 10:37]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.51-ndb-7.0.20 (revid:jonas@mysql.com-20101021085841-gen335fpuaugd5d8) (version source revid:jonas@mysql.com-20101021085841-gen335fpuaugd5d8) (merge vers: 5.1.51-ndb-7.0.20) (pib:21)
[21 Oct 2010 10:39]
Jonas Oreland
pushed to 6.3.39, 7.0.20 and 7.1.9
[22 Oct 2010 13:18]
Jon Stephens
Documented bugfix in the NDB-6.3.39, 7.0.20, and 7.1.9 changelogs as follows:
ndb_restore now retries failed transactions when replaying log
entries, just as it does when restoring data.
Closed.
