ndb - bug#57618 - also retry log-entries, (patch use goto to make it small)